--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "nodemon -L"
+    "start": "node index.js"
   },
   "author": "Group 12",
   "license": "ISC",
