--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,8 @@
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "sequelize": "^6.21.4",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "stripe": "^10.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
