--- a/.gitignore
+++ b/.gitignore
@@ -218,4 +218,6 @@ $RECYCLE.BIN/
 # package-lock.json
 package-lock.json
 
+/api/src/DB_variables.js
+
 # End of https://www.toptal.com/developers/gitignore/api/node,windows,linux,macos
