--- a/api/package.json
+++ b/api/package.json
@@ -19,7 +19,9 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.8",
     "pg": "^8.8.0",
     "sequelize": "^6.21.4",
     "sequelize-cli": "^6.4.1"
