--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "sequelize": "^6.21.4",
